--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.2.5",
     "@astrojs/tailwind": "^5.1.0",
-    "tailwindcss": "^3.4.1"
+    "astro": "^5.2.5",
+    "tailwindcss": "^3.4.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
